# PrimeNet

./: README.md  __init__.py  model.py  model_noEpigenetics.py  pyproject.toml  test.py  train.py  train_noEpigenetics.py
DeepPE/: best_deeppe.py  models.py  train.py
Distillation/: models.py  student.pth
PRIDICT/: best_pridict.py  test.py  train.py
deepprime/: data.py  model.py  test.py  train.py
deepprime/model_pth/: deepprime.pth
