[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primenet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=2.2.6", "pandas>=2.3.1", "scikit-learn>=1.7.0", "scipy>=1.15.3", "torch>=2.7.1"]

[tool.setuptools]
packages = ["primenet"]

[tool.setuptools.package-dir]
"primenet" = "."

[tool.setuptools.package-data]
"primenet" = ["*.pth", "*.tar.xz", "*.png", "*.txt", "*.md", "PRIDICT/*", "Distillation/*", "deepprime/*", "DeepPE/*"]
